--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>io.patriot-framework</groupId>
+			<artifactId>generator</artifactId>
+			<version>2.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
